# erdos97

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CODE.md  LICENSE-DOCS-DATA.md  LICENSE.md  LICENSE_NOT_SELECTED.md  Makefile  README.md  RESULTS.md  STATE.md  contradictions.md  dropped_kernels.md  inventory.json  kernels.json  lake-manifest.json  lakefile.lean  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  unclassified.md
.github/: labels.yml
certificates/: README.md  best_B12_certificate_template.json  n8_exact_analysis.json  n8_polynomial_systems.txt
cpp/: n10_kalmanson_pair_filter_probe.cpp  n_vertex_search_fast.cpp
docs/: adaptive-radius-blocker-bridge.md  all-rich-class-pair-budget.md  altman-diagonal-sums.md  archive-research-pass-2026-06-09.md  artifact-provenance-policy.md  asymmetric-kite-closure.md  block6-fragile-fifth-row-obstruction-catalog.md  block6-fragile-sixth-row-survivor-catalog.md  block6-fragile-vertex-circle-extension-audit.md  bootstrap-core-bridge.md  bootstrap-core-complement-seeding.md  bootstrap-core-crosswalk.md  bootstrap-t12-151-6-endpoint8-forcing-preflight.md  bootstrap-t12-151-6-label4-cascade-endpoint8-targets.md  bootstrap-t12-151-6-label4-cascade-row-criticality.md  bootstrap-t12-151-6-label4-center8-core-route.md  bootstrap-t12-151-6-label4-center8-migration-preflight.md  bootstrap-t12-151-6-label4-center8-migration-support-crosswalk.md  bootstrap-t12-151-6-label4-center8-residual-target-rows.md  bootstrap-t12-151-6-outside-pair-audit.md  (+362 more)
(+1544 files in other folders)
