[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erdos97-research"
version = "0.1.0"
description = "Research tooling for Erdős Problem #97"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "sympy>=1.12",
  "z3-solver>=4.12"
]

[project.scripts]
erdos97-search = "erdos97.search:main"

[tool.setuptools.packages.find]
where = ["src"]
