[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "erdos97-research"
version = "0.1.0"
description = "Research tooling for Erdős Problem #97"
license = "MIT"
license-files = ["LICENSE-CODE.md"]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "PyYAML>=6",
  "ruff>=0.15",
  "sympy>=1.12",
  "z3-solver>=4.12"
]

[project.scripts]
erdos97-search = "erdos97.search:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
